# sculptor-mlir

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs.yml
docs/: mkdocs.yml  requirements.txt
docs/pages/: design.md  index.md  placement.md  walkthrough.md
docs/pages/css/: site.css
docs/pages/js/: open-github-link.js
include/: CMakeLists.txt
include/sculptor-mlir/Dialect/Sculptor/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Sculptor/Conversion/: CMakeLists.txt  EmitRuntimeGraph.cpp  FinalizeGolemIntrinsics.cpp  LowerGolemToLLVMShims.cpp  Passes.cpp
lib/Dialect/Sculptor/IR/: CMakeLists.txt  SculptorAttrs.cpp  SculptorBase.cpp  SculptorOps.cpp  SculptorTypes.cpp
lib/Dialect/Sculptor/Transforms/: AnalyzeTaskGraphTiming.cpp  AssembleTaskGraph.cpp  BuildTaskGraphIslands.cpp  CMakeLists.txt  CanonicalizeLayers.cpp  ConvertLayers.cpp  ExportTaskGraphDot.cpp  ExportTaskGraphIslandMap.cpp  ExportTaskGraphSimModel.cpp  ExportTaskGraphVis.cpp  ExtractLayers.cpp  FinalizeTaskGraphResources.cpp  Passes.cpp  (+4 more)
runtime/common/: CMakeLists.txt
runtime/common/include/: TaskGraphRuntime.h  TaskGraphRuntimeBackend.h  TaskGraphRuntimeUtils.h  runtime_utils.h
runtime/common/lib/: TaskGraphRuntimeArgs.cpp  TaskGraphRuntimeBuffers.cpp  TaskGraphRuntimeCommon.h  TaskGraphRuntimeGraph.cpp  TaskGraphRuntimeHandles.cpp  TaskGraphRuntimeState.cpp
tests/: README.md
tests/mlir/: analyze_task_graph_timing.mlir  analyze_task_graph_timing_analog_pipeline.mlir  analyze_task_graph_timing_cycle.mlir  analyze_task_graph_timing_network_contention.mlir  analyze_task_graph_timing_network_pipeline_modes.mlir  assemble_task_graph_resource_baseline.mlir  canonicalize_gru.mlir  canonicalize_gru_cell.mlir  canonicalize_gru_cell_no_bias.mlir  canonicalize_lstm_cell.mlir  canonicalize_rnn.mlir  canonicalize_rnn_cell.mlir  canonicalize_rnn_cell_dataflow.mlir  canonicalize_torch_transformer_fixtures.mlir  convert_conv1d_to_mvm_tasks.mlir  convert_convs_to_mvm.mlir  convert_gru_cell_to_mvm.mlir  convert_gru_to_mvm.mlir  convert_linear_to_mvm.mlir  convert_lstm_cell_to_mvm.mlir  convert_lstm_to_mvm.mlir  convert_rnn_cell_to_mvm.mlir  convert_rnn_to_mvm.mlir  convert_torch_transformer_to_mvm.mlir  expand_conv2d_to_golem_tasks.mlir  expand_conv3d_to_golem_tasks.mlir  expand_grouped_conv2d_to_golem_tasks.mlir  expand_gru_cell_to_golem_tasks.mlir  expand_gru_to_golem_tasks.mlir  expand_lstm_cell_to_golem_tasks.mlir  expand_lstm_to_golem_tasks.mlir  expand_mvm_to_golem.mlir  expand_rnn_cell_to_golem_tasks.mlir  expand_rnn_to_golem_tasks.mlir  export_task_graph_dot.mlir  export_task_graph_sim_model.mlir  export_task_graph_sim_model_unscheduled.mlir  export_task_graph_vis.mlir  export_task_graph_vis_invalid.mlir  extract_gru.mlir  (+60 more)
tools/: CMakeLists.txt
tools/sculptor-mlir-opt/: CMakeLists.txt  sculptor-mlir-opt.cpp
(+231 files in other folders)
